# SKATE

./: .gitignore  AUTHORS.md  LICENSE  codemeta.json  environment.yaml  get_all_metadata.py  get_endpoints.py  get_intersections.py  get_meanlines.py  get_roi.py  get_segment_assignments.py  get_segments.py  get_thresholded_image.py  pyproject.toml  requirements.txt  resize_image.py  run_tests.py  set_seismo_status.sh  stats.json  test_meanlines_and_roi.py  test_meanlines_and_roi_s3.sh
010170_0105_0072_06/: roi.json
data/examples/: meanlines.json  segments.json  selected_files.txt
data/outputs/: intersections.json  segments.json
docs/: README.md
docs/source/: acknowledgements.md  conf.py  current_status.md  index.md
docs/source/_templates/: ucb_stack.html
docs/source/operating/: index.md
lib/: binarization.py  debug.py  draw.py  endpoints.py  intersection_detection.py  load_image.py  meanline_detection.py  mitchells_best_candidate.py  ridge_detection.py  roi_detection.py  segment_assignment.py  segment_detection.py  threshold.py  trace_segmentation.py  utilities.py
outputs/: Untitled.ipynb  intersections.json  roi.json
outputs/010170_0105_0072_06/: meanlines.json
outputs/010171_1218_0106_05/: meanlines.json  roi.json
queue-tools/: select_random_files.py  spawn_instances.py
scripts/: batch_process.py
scripts/queue-tools/: spawn_spot_instances.py  update_instances.py
some-directory/: meanlines.json  roi.json
src/seismogram_pipeline/: __init__.py
src/seismogram_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/seismogram_pipeline/cli/: __init__.py  get_all_metadata.py  get_endpoints.py  get_intersections.py  get_meanlines.py  get_roi.py  get_segment_assignments.py  get_segments.py  get_thresholded_image.py  resize_image.py
tests/: intersections.json  run_tests.py  test_imports.py
(+20 files in other folders)
